# code-snippets

./: README.md  index.html  requirements.txt
.github/workflows/: bigquery.yml
2017/acl-weather/: README.md  acl-weather.ipynb
2017/austin-taco-transit/: README.md  austin-taco-transit.ipynb  busstops.csv  tacos.csv
2017/count-3x3-images/: count.py  count_test.py
2017/names-pareto/: README.md  names-pareto.ipynb
2018/python-community-insights/: Python Community Insights.ipynb
2019/avro-to-arrow/: AUTHORS  README.rst  setup.py
2019/avro-to-arrow/avro_to_arrow/: __init__.py  decoder.py  example.py  generator.py
2019/avro-to-arrow/tests/: test_decoder.py
2019/python-auth-samples/: README.md  api_key.py  iam.py  requirements.txt  scopes.py
2020/bigquery-python/: user-credentials-magics.ipynb
2021/06-python-decorator/: decorator_sample.py
2024/12-bigframes-usa-names/: usa_names.ipynb
2024/12-bigquery-utils/: bigquery-utils.ipynb  bigquery-utils.nbconvert.ipynb
2024/12-pydata-global/: index.md
2025/: anywidget_fallback_experiment.ipynb  overcastdata_freeze_dates.ipynb
2025/arrow_bigquery_gcloud_sdk/: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml
2025/arrow_bigquery_gcloud_sdk/src/: main.rs
2025/census-data-airflow-bigframes/: census_to_bigquery.dot  census_to_bigquery.py  census_to_bigquery_split.dot  census_to_bigquery_split.py  census_to_bigquery_venv.py  http_to_gcs_bash.py  https_to_gcs.py
2025/national-jukebox/: download_all.py  download_first_page.py  download_mp3s.py  extract_item_info.py  extract_mp3.py  list_urls.py  transcribe_songs.ipynb
2025/polars_bigquery_gcloud_bigquery/: Cargo.toml  Makefile  pyproject.toml  run.py
2025/polars_bigquery_gcloud_bigquery/polars_bigquery_gcloud_bigquery/: __init__.py
2025/polars_bigquery_gcloud_bigquery/src/: lib.rs  main.rs
2025/polars_bigquery_gcloud_bigquery/tests/: test_pig_latinnify.py  test_scan_random.py
2025/polars_bigquery_gcloud_sdk/: Cargo.toml  Makefile  README.md  pyproject.toml  run.py
2025/polars_bigquery_gcloud_sdk/.github/workflows/: publish_to_pypi.yml
2025/polars_bigquery_gcloud_sdk/polars_bigquery_gcloud_sdk/: __init__.py
2025/polars_bigquery_gcloud_sdk/src/: lib.rs  main.rs
2025/polars_bigquery_gcloud_sdk/tests/: test_pig_latinnify.py  test_scan_random.py
2025/polars_bigquery_gcp_bigquery_client/: Cargo.toml  Makefile  README.md  pyproject.toml  run.py
2025/polars_bigquery_gcp_bigquery_client/polars_bigquery_gcp_bigquery_client/: __init__.py
2025/polars_bigquery_gcp_bigquery_client/src/: lib.rs
2025/polars_bigquery_gcp_bigquery_client/tests/: test_pig_latinnify.py  test_scan_random.py
2026/scipy-lightning-talk/: lightning-download.ipynb  lightning-predict.ipynb  lightning.parquet  main.py  pyproject.toml  wheat-download.ipynb  wheat-predict.ipynb  wheat.csv
bigquery-dataframes-iowa-liquor-sales/: codelab.json  index.html
