[package]
name = "arrow-bigquery"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow = "56.0.0"
gcloud-sdk = { version = "0.27.4", features = ["google-cloud-bigquery-storage-v1"] }
prost = "0.13"
prost-types = "0.13"
rand = { version = "0.8.5", features = [] }
rustls = { version = "0.23.31", features = ["ring"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version ="0.3", features = ["env-filter"] }
