[package]
name = "polars-bigquery-gcloud-sdk"
version = "0.1.0"
edition = "2021"

[lib]
name = "polars_bigquery_gcloud_sdk"
crate-type= ["cdylib"]

[dependencies]
polars = { version = "0.49.1", features = ["fmt", "dtype-date", "timezones", "lazy"], default-features = false }
polars-arrow = { version = "0.49.1", default-features = false }
pyo3 = { version = "0.25", features = ["abi3-py39"] }
pyo3-polars = { version = "0.22.0", features = ["derive", "lazy"] }
rand = { version = "0.8.5", features = [] }
